--- a/html+css/Drum Kit/index.html
+++ b/html+css/Drum Kit/index.html
@@ -5,61 +5,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="keys">
         <div class="key">
             <kbd data-key="65">A</kbd>
-            <span class="sound"></span>
+            <span class="sound">clap</span>
         </div>
         <div class="key">
             <kbd data-key="83">S</kbd>
-            <span class="sound"></span>
+            <span class="sound">hihat</span>
         </div>
         <div class="key">
             <kbd data-key="68">D</kbd>
-            <span class="sound"></span>
+            <span class="sound">kick</span>
         </div>
         <div class="key">
             <kbd data-key="70">F</kbd>
-            <span class="sound"></span>
+            <span class="sound">open</span>
         </div>
         <div class="key">
             <kbd data-key="71">G</kbd>
-            <span class="sound"></span>
+            <span class="sound">boom</span>
         </div>
         <div class="key">
             <kbd data-key="72">H</kbd>
-            <span class="sound"></span>
+            <span class="sound">ride</span>
         </div>
         <div class="key">
             <kbd data-key="74">J</kbd>
-            <span class="sound"></span>
+            <span class="sound">snare</span>
         </div>
         <div class="key">
             <kbd data-key="75">K</kbd>
-            <span class="sound"></span>
+            <span class="sound">tom</span>
         </div>
         <div class="key">
             <kbd data-key="76">L</kbd>
-            <span class="sound"></span>
+            <span class="sound">tink</span>
         </div>
     </div>
 
-    <audio data-key="65" src=""></audio>
-    <audio data-key="83" src=""></audio>
-    <audio data-key="68" src=""></audio>
-    <audio data-key="70" src=""></audio>
-    <audio data-key="71" src=""></audio>
-    <audio data-key="72" src=""></audio>
-    <audio data-key="74" src=""></audio>
-    <audio data-key="75" src=""></audio>
-    <audio data-key="76" src=""></audio>
+    <audio data-key="65" src="sounds/clap.wav"></audio>
+    <audio data-key="83" src="sounds/hihat.wav"></audio>
+    <audio data-key="68" src="sounds/kick.wav"></audio>
+    <audio data-key="70" src="sounds/open.wav"></audio>
+    <audio data-key="71" src="sounds/boom.wav"></audio>
+    <audio data-key="72" src="sounds/ride.wav"></audio>
+    <audio data-key="74" src="sounds/snare.wav"></audio>
+    <audio data-key="75" src="sounds/tom.wav"></audio>
+    <audio data-key="76" src="sounds/tink.wav"></audio>
 
     <script>
-        function palySound(event) {
+        const keys = document.querySelectorAll('.keys');
+        // keys.forEach(key => key.addEventListener('', ''));
+        window.addEventListener('keydown', playSound);
 
+        function playSound(event) {
+            const audio = document.querySelector(`audio[data-key="${event.keyCode}"`);
+            audio.play();
         }
     </script>
 </body>
