--- a/30-seconds-css/bounce-loading.html
+++ b/30-seconds-css/bounce-loading.html
@@ -5,6 +5,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        @keyframes bouncing-loader {
+            from {
+                opacity: 1;
+                transform: translateY(1em);
+            }
+
+            to {
+                opacity: 0.1;
+                transform: translateY(0);
+            }
+        }
+
+        .bouncing-loader {
+            display: flex;
+            justify-content: center;
+            /* align-items: center; */
+        }
+
+        .bouncing-loader>div {
+            width: 1rem;
+            height: 1rem;
+            margin: 0 0.5rem;
+            background: #8385aa;
+            border-radius: 50%;
+            animation: bouncing-loader 0.6s infinite alternate;
+        }
+
+        .bouncing-loader>div:nth-child(2) {
+            animation-delay: 0.2s;
+        }
+
+        .bouncing-loader>div:nth-child(3) {
+            animation-delay: 0.4s;
+        }
+    </style>
 </head>
 
 <body>
