--- a/卡片布局.html
+++ b/卡片布局.html
@@ -16,13 +16,26 @@
             grid-template-columns: 1fr;
             grid-template-rows: auto;
             grid-gap: 20px;
-            background: pink;
+            /* background: pink; */
         }
 
         .card {
-            background-color: white;
+            background-color: pink;
             text-decoration: none;
 
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            min-height: 100%;
+
+            position: relative;
+            top: 0;
+            transition: all .1s ease-in;
+        }
+
+        .card:hover {
+            top: -2px;
+            box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
         }
 
         @media only screen and (min-width: 500px) {
